styling fix to cutout spacing

--- a/src/styles/CutOut.scss
+++ b/src/styles/CutOut.scss
@@ -16,6 +16,7 @@ $shadow-hover-skew: (($hover-skew / 2) * -1);
 p {
   color: white;
   font-size: 10rem;
+  font-weight: bold;
 
   span {
     display: inline-block;
@@ -23,6 +24,7 @@ p {
     transform-style: preserve-3d;
     perspective: 500;
     -webkit-font-smoothing: antialiased;
+    margin-right: 20px;
     
     &::before,
     &::after {
@@ -57,10 +59,6 @@ p {
         transform: rotateY(0);
         text-shadow: -1px 0 1px $background-color, 1px 0 1px rgba(0, 0, 0, 0);
       }
-    }
-
-    & + span {
-      // margin-left: $letter-spacing;
     }
   }
 }
