--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -8,6 +8,7 @@
   color: #fff;
   transform: translate(-50%, -100%); 
   text-transform: uppercase;
+  letter-spacing: 20px;
 }
 
 .background {
